[package]
name = "rust-ubtree"
version = "0.0.0-development"
edition = "2021"
authors = ["Christoph Bühler <cbuehler@rootd.ch>"]
license = "Apache-2.0"
repository = "https://github.com/buehler/rust-ubtree"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "inserting"
harness = false

[[bench]]
name = "querying"
harness = false
